SnakeCharm Changelog
====================

Here you can see the full list of changes between each big release.

Version 0.8.1 build #0.8.1.xxx
-------------
Released on ...

Features:
- PyCharm 2020.3 compatibility (see #337)
- Snakemake specific formatter settings (see #338)
- `envmodules` parsing (see #332)
- Inspection: Comment at the end of Snakefile is treated as syntax error (see #58)
- Inspection: envmodules directive is only allowed with shell, script, notebook, or wrapper directives (not with run) (see #340)
- Inspection: Warn about double quotation on runtime in cases like {config['foo']} for snakemake string injections (see #329)
- Inspection: Warn users if they have arguments with same value in section (see #263)
- Inspection: Comma in the end of section arg list isn't needed (see #255)
- Inspection: Warn user if rule from 'rulesorder' isn't available in current or included files (see #254)
- Inspection: Warn about string arguments split on several lines (see #259)
- Injection: Inject regexp language into wildcard_constraints section params values (see #182)
- Inspection: Correct using methods ancient, protected, directory (see #250)
- Inspection: Warn users if they have callable arguments in sections that does not expect it (see #198)
- Inspection: Warn users if they have keyword arguments in sections that does not expect it (see #196)
- Inspection: Warn about usage of rule/checkpoint/subworkflow objects as arguments instead of one of its fields (see #257)
- Action: Correct Up/Down StatementMover for rule sections (see #174)
- Action: Show folding for multiline rule sections (input, output, etc) (see #314)

Fixed:
- PluginException: Inspection #SmkAvoidTabWhitespace has no description [Plugin: SnakeCharm]
- Do not warn about 'touch' misuse in benchmark and log sections
- Completion does not suggest top-level keywords in comments (see #178)
- Suppress inspection doesn't work in some cases (see #313)