@@ -84,6 +84,16 @@ INSP.NAME.localrules.ruleorder.repeated.rule=This rule has already been added to
 INSP.NAME.localrules.ruleorder.confusing.ref=Confusing name, the rule isn''t defined in this file.
 INSP.NAME.localrules.ruleorder.confusing.ref.msg=Rule ''{0}'' isn''t defined in this file, not an error but it is confusing.
 
+# SmkSectionVariableRequiresLambdaAccessInspection
+INSP.NAME.section.var.requires.lambda.title=Rule section access requires lambda.
+INSP.NAME.section.var.requires.lambda.possible.access.message=Access to outer scope ''{0}'' object with the name similar to snakemake specific variable. To use snakemake ''{0}'' variable, use lambda expression here, e.g. `lambda wildcards, input: input.foo`.
+#INSP.NAME.section.var.requires.lambda.possible.access.message=Access to outer scope ''{0}'' object with the name similar to snakemake specific variable. To use snakemake ''{0}'' variable, use lambda expression here, e.g. `lambda wildcards, {0}: {0}.foo`.
+#INSP.NAME.section.var.requires.lambda.possible.access.message=Access to outer scope ''{0}'' object with the name similar to snakemake specific variable. To use snakemake 'wildcards' variable, use lambda expression here, e.g. `lambda wildcards: wildcards.foo`.
+INSP.NAME.section.var.requires.lambda.warning.message=To access ''{0}'' section use lambda here, e.g. `lambda wildcards, input: input.foo`.
+#INSP.NAME.section.var.requires.lambda.warning.message=To access ''{0}'' section use lambda here, e.g. `lambda wildcards, {0}: {0}.foo`.
+#INSP.NAME.section.var.requires.lambda.warning.message=To access 'wildcards' section use lambda here, e.g. `lambda wildcards: wildcards.foo`.
+INSP.NAME.section.var.requires.lambda.warning.unsupported.lambda.var.message=Snakemake variable ''{0}'' cannot be used in ''{1}'' directly or using lambdas.
+
 # SmkLambdaRuleParamsInspection
 INSP.NAME.only.specific.lambda.params=Only specific lambda params should be used in this section.
 INSP.NAME.only.these.parameters.in.section=Only use ''{0}'' as lambda parameter in ''{1}'' section.
