@@ -1,0 +1,6 @@
+<html>
+<body>
+This inspection warns if identifier requires lambda access. E.g. 'input', 'output', 'wildcards' cannot be accessed
+directly in 'params' section. In such case user should use lambda syntax, e.g. <code>basename = lambda wildcards, input, output, threads, resources: input.bam.replace(".bam", "")</code>.
+</body>
+</html>
